--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   go_router: ^6.0.0
   sqflite: ^2.2.5
   path_provider: ^2.0.13
+  uuid: ^3.0.6
+  calendar_date_picker2: ^0.4.5
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
